--- a/filters/package.json
+++ b/filters/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "login-register-system",
+  "name": "filters",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,14 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
-    "bootstrap": "^5.3.3",
-    "dom": "^0.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.4.0",
-    "router": "^1.3.8",
-    "sass": "^1.86.0"
+    "sass": "^1.86.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
